# ZeroHuman-Agency

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_SUBSCRIPTION_GUIDE.md  CONTRIBUTING.md  DECISIONS_BASED_ON_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile.frontend  FINAL_REPORT.md  FRONTEND_BACKEND_ALIGNMENT_FIX.md  FRONTEND_CODE_REVIEW_REPORT.md  HUMANIZER_READY.md  LICENSE  LLM_FALLBACK_IMPLEMENTATION_COMPLETE.md  OPEN_SOURCE_PREPARATION_SUMMARY.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PROJECT_DESCRIPTION.md  README.md  RISPOSTA_FRONTEND_ADATTATO.md  SECURITY.md  deploy_heartbeat_system.sh  docker-compose.dev.yml  docker-compose.full.yaml  docker-compose.postiz.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  post_deploy_verification.sh  rollback_heartbeat_system.sh  setup.sh  skills-lock.json  tsconfig.json
python/: .dockerignore  Dockerfile  README.md  fallback_metrics.json  heartbeat_usage_example.py  pyproject.toml  requirements-audit.txt  test_fallback_implementation.sh  test_heartbeat_integration.sh  test_humanizer_quick.sh
python/scripts/: seed_agent_system.py
python/src/content_engine/: config.py  db.py  main.py  models.py
python/src/content_engine/agents/: __init__.py  adapter.py  agent_loader.py  editor.py  god_system.py  humanizer.py  mcp_client.py  writer.py  writing_lab.py
python/src/content_engine/api/: auth_middleware.py  routes.py  routes_agents.py  routes_automations.py  routes_brand_discovery.py  routes_campaigns.py  routes_email_marketing.py  routes_images.py  routes_internal.py  routes_llm_providers.py  routes_postiz.py  routes_research.py  routes_setup.py  routes_video.py  setup_mode_middleware.py
python/src/content_engine/config/: __init__.py  llm_models.py  settings.py
python/src/content_engine/memory/: __init__.py  arbiter.py  decay.py  retrieval.py
python/src/content_engine/monitoring/: pipeline_health.py
python/src/content_engine/orchestrator/: __init__.py  content.py  research.py
python/src/content_engine/retrievers/: base.py  competitor_spider.py  deep_research.py  duckduckgo.py  gmail.py  rss.py  serper.py  tavily.py  x.py  youtube.py
python/src/content_engine/scoring/: engine.py
python/src/content_engine/services/: alerting.py  auto_optimizer.py  brand_secrets.py  brevo_client.py  content_enrichment.py  credential_vault.py  email_providers.py  embeddings.py  feature_flags.py  feedback_loop.py  (+14 more)
python/tests/: conftest.py  test_agent_system_e2e.py  test_brand_assets_helper.py  test_brand_secrets.py  test_core.py  test_degradation.py  test_e2e_heartbeat_integration.py  test_fallback_metrics.py  test_feature_flags.py  test_god_mode_parser.py  test_heartbeat_pragmatic.py  test_humanizer.py  test_humanizer_integration.py  test_image_backends.py  test_image_generator_jobs.py  test_image_prompt_builder.py  test_json_parser.py  test_llm_fallback.py  test_model_routing.py  test_notification.py  test_parallel_llm.py  test_scoring_engine.py  test_security.py  test_security_isolation.py  test_telegram_bot.py
(+468 files in other folders)
