[project]
name = "content-engine-backend"
version = "0.1.0"
description = "AI Content Engine — Research pipeline, scoring, and orchestration backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.94.0",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "resend>=2.0.0",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[project.scripts]
serve = "uvicorn:main"

[tool.uv]
package = false
