[project]
name = "content-engine-backend"
version = "0.1.0"
description = "AI Content Engine — Research pipeline, scoring, and orchestration backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.94.0",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "firecrawl-py>=1.0.0",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "openai>=1.59.0",
    "pydantic-settings>=2.13.1",
    "resend>=2.0.0",
    "brevo-python>=4.0.0",
    "mailchimp-marketing>=3.0.0",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pillow>=11.0.0",
    "duckduckgo-search>=6.0.0",
    "tavily-python>=0.3.0",
    "trafilatura>=2.0.0",
    "cryptography>=44.0.0",
]

[project.scripts]
serve = "uvicorn:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
