[project]
name = "content-engine-backend"
version = "0.1.0"
description = "AI Content Engine — Research pipeline, scoring, and orchestration backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.94.0",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "firecrawl-py>=1.0.0",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "openai>=1.59.0",
    "pydantic-settings>=2.13.1",
    "resend>=2.0.0",
    "brevo-python>=4.0.0",
    "mailchimp-marketing>=3.0.0",
    "cryptography>=44.0.0",
    "scrapling>=0.2.0",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pillow>=11.0.0",
    "duckduckgo-search>=6.0.0",
    "tavily-python>=0.3.0",
    "trafilatura>=2.0.0",
    # Security pins — force patched transitive deps to safe minimum versions
    "urllib3>=2.7.0",           # CVE-2026-44431, CVE-2026-44432
    "python-multipart>=0.0.27", # CVE-2026-42561
    "idna>=3.15",               # CVE-2026-45409 (DoS via long inputs to idna.encode)
]

[project.scripts]
serve = "uvicorn:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501", "E402"]         # E501: length handled by formatter; E402: intentional conditional imports

[tool.uv]
package = false
